update 26/02 before create branch dev

--- a/app/src/main/res/layout/expanded_right_layout.xml
+++ b/app/src/main/res/layout/expanded_right_layout.xml
@@ -10,7 +10,7 @@
 
         <RelativeLayout
             android:id="@+id/expand_container_right"
-            android:visibility="gone"
+            android:visibility="visible"
             android:layout_alignParentEnd="true"
             android:layout_width="180dp"
             android:layout_height="270dp">
