--- a/app/src/main/res/layout/expanded_right_layout.xml
+++ b/app/src/main/res/layout/expanded_right_layout.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.example.bubblecontrol.bubbleSource.BubbleLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.example.bubblecontrol.bubbleSource.ExpandedLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical">
 
     <RelativeLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
         <RelativeLayout
@@ -16,59 +16,64 @@
             android:layout_height="270dp">
 
             <ImageView
-                android:id="@+id/avatar01"
+                android:id="@+id/iv_x"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
                 android:layout_gravity="center"
-                android:background="@drawable/profile_decorator"
                 android:scaleType="centerCrop"
-                android:src="@drawable/profile" />
+                android:src="@drawable/x" />
 
             <ImageView
-                android:id="@+id/avatar02"
+                android:id="@+id/iv_pause"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
+                android:layout_above="@id/iv_x"
+                android:layout_marginBottom="20dp"
                 android:layout_alignParentEnd="true"
                 android:layout_marginRight="20dp"
-                android:background="@drawable/profile_decorator"
                 android:scaleType="centerCrop"
-                android:src="@drawable/profile" />
+                android:src="@drawable/pause" />
 
             <ImageView
-                android:id="@+id/avatar03"
+                android:id="@+id/iv_play"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
-                android:layout_marginRight="90dp"
-                android:layout_marginTop="50dp"
-                android:layout_alignParentEnd="true"
-                android:background="@drawable/profile_decorator"
+                android:layout_above="@id/tv_x_point"
+                android:layout_toStartOf="@id/tv_x_point"
                 android:scaleType="centerCrop"
-                android:src="@drawable/profile" />
+                android:src="@drawable/play" />
+
+            <TextView
+                android:id="@+id/tv_x_point"
+                android:layout_centerVertical="true"
+                android:layout_toStartOf="@id/iv_x"
+                android:layout_marginEnd="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="20dp" />
 
             <ImageView
-                android:id="@+id/avatar04"
+                android:id="@+id/iv_setting"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
-                android:layout_marginRight="90dp"
-                android:layout_marginTop="135dp"
-                android:layout_alignParentEnd="true"
-                android:background="@drawable/profile_decorator"
+                android:layout_below="@id/tv_x_point"
+                android:layout_toStartOf="@id/tv_x_point"
                 android:scaleType="centerCrop"
-                android:src="@drawable/profile" />
+                android:src="@drawable/setting" />
 
             <ImageView
-                android:id="@+id/avatar05"
+                android:id="@+id/iv_home"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginTop="185dp"
+                android:layout_below="@id/iv_x"
+                android:layout_toStartOf="@id/iv_x"
+                android:layout_marginEnd="20dp"
+                android:layout_marginTop="20dp"
                 android:layout_alignParentEnd="true"
-                android:background="@drawable/profile_decorator"
                 android:scaleType="centerCrop"
-                android:src="@drawable/profile" />
+                android:src="@drawable/home" />
         </RelativeLayout>
     </RelativeLayout>
 
-</com.example.bubblecontrol.bubbleSource.BubbleLayout>
+</com.example.bubblecontrol.bubbleSource.ExpandedLayout>
