--- a/app/src/main/res/layout/expanded_right_layout.xml
+++ b/app/src/main/res/layout/expanded_right_layout.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.example.bubblecontrol.bubbleSource.ExpandedLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@color/trans"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <RelativeLayout
             android:id="@+id/expand_container_right"
@@ -76,4 +77,4 @@
         </RelativeLayout>
     </RelativeLayout>
 
-</com.example.bubblecontrol.bubbleSource.ExpandedLayout>
+</FrameLayout>
