--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
 
     <color name="white">#ffffff</color>
     <color name="brand_red">#d51826</color>
+    <color name="trans">#33000000</color>
 </resources>
